cmake_minimum_required(VERSION 3.15)

project("dl-examples" NONE)
if(WIN32)
    enable_language(CXX)
else()
    enable_language(CXX C ASM)
endif()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>DLL")

if(MSVC)
    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:/W3>)
else()
    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-Wall>)
    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-Wconversion>)
    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-Wsign-conversion>)
    add_compile_options($<$<COMPILE_LANGUAGE:CXX>:-Wsign-compare>)
endif()

add_subdirectory("repromath")
add_subdirectory("lazyrepromath")
add_subdirectory("lazydemo")
add_subdirectory("apidemo")
add_subdirectory("pyapidemo")
if(WIN32 AND MSVC)
    add_subdirectory("whereispython")
    add_subdirectory("plugindemo")
endif()
add_subdirectory("tlsdemo")
